# berdl_task_browser

./: .copier-answers.yml  .gitignore  .prettierignore  CLAUDE.md  README.md  RELEASE.md  install.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml  release-wheel.yml
berdl_cts_browser/: __init__.py  viewer.py
berdl_task_browser/: __init__.py  handlers.py  viewer.py
jupyter-config/jupyter_server_config.d/: berdl_cts_browser.json  berdl_task_browser.json
scripts/: cts_proxy.py
src/: config.ts  index.ts
src/__tests__/: berdl_cts_browser.spec.ts  berdl_task_browser.spec.ts
src/api/: ctsApi.ts  mockData.ts
src/auth/: token.ts
src/components/: CTSBrowser.tsx  ErrorBoundary.tsx  JobDetail.tsx  JobEmbedWidget.tsx  JobFilters.tsx  JobList.tsx  JobListItem.tsx  JobWizard.tsx  LogViewer.tsx  StatusChip.tsx  TokenInput.tsx
src/dialogs/: JobWizardDialog.ts
src/mocks/: browser.ts  handlers.ts
src/types/: jobs.ts  window.ts
src/utils/: dateUtils.ts  fileBrowserNav.ts  notebookUtils.ts  s3PathMapping.ts  s3PathResolver.ts
style/: base.css
ui-tests/: package.json
ui-tests/tests/: berdl_task_browser.spec.ts
